调整目录结构

--- a/docs/开发语言/Go语言开发/开发环境搭建/模块管理.md
+++ b/docs/开发语言/Go语言开发/开发环境搭建/模块管理.md
@@ -97,7 +97,7 @@ go env -w GOPRIVATE=gitlab.wsh-study.com
 
 Go Modules是使用Github或Gitlab的标签功能来做版本管理，但是`go get`和`go mod`相关命令对版本号有严格规定，只能使用标准的"语义化版本号"
 
-![语义化版本](./assets/语义化版本.png)
+![语义化版本](./assets/模块管理/语义化版本.png)
 
 其版本格式为"主版本号.次版本号.修订号"，版本号的递增规则如下：
 
@@ -107,7 +107,7 @@ Go Modules是使用Github或Gitlab的标签功能来做版本管理，但是`go 
 
 假设你是先行版本号或特殊情况，可以将版本信息追加到“主版本号.次版本号.修订号”的后面作为延伸(中间必须加短横线)，如下：
 
-![语义化版本-特殊情况](./assets/语义化版本-特殊情况.png)
+![语义化版本-特殊情况](./assets/模块管理/语义化版本-特殊情况.png)
 
 !!! note "注意事项"
     **我们介绍了 Go modules 所支持的两类版本号方式，在我们发布新版本打 tag 的时候，需要注意遵循，否则不遵循语义化版本规则的版本号无法进行拉取**
@@ -125,4 +125,4 @@ go mod tidy
 
 为了支持Go Modules，需要将VS Code的Go语言插件至少升级到 `0.23.0`版本，这个版本默认开启了 Gopls 语言服务器功能。更新完成后 VS Code 的左下角如下图所示
 
-![VS Code启用Go Modules](./assets/VSCode启用GoModules.png)
+![VS Code启用Go Modules](./assets/模块管理/VSCode启用GoModules.png)
