--- a/docs/设计模式/创建型模式/工厂方法模式.md
+++ b/docs/设计模式/创建型模式/工厂方法模式.md
@@ -28,7 +28,7 @@
 
 工厂一旦需要生产新产品就需要修改工厂类的方法逻辑，违背了“开放 - 关闭原则”
 
-> 1. 即**简单工厂模式**的缺点
+> 1. 即 **简单工厂模式** 的缺点
 > 2. 之所以可以解决简单工厂的问题，是因为工厂方法模式把具体产品的创建推迟到工厂类的子类（具体工厂）中，此时工厂类不再负责所有产品的创建，而只是给出具体工厂必须实现的接口，这样工厂方法模式在添加新产品的时候就不修改工厂类逻辑而是添加新的工厂子类，符合开放封闭原则，克服了简单工厂模式中缺点
 
 ## 2. 模式原理
@@ -46,15 +46,15 @@
 
 #### 2.3 使用步骤
 
-**步骤1：** 创建 **抽象工厂类** ，定义具体工厂的公共接口；
+**步骤1** 创建 **抽象工厂类** ，定义具体工厂的公共接口；
 
-**步骤2：** 创建 **抽象产品类** ，定义具体产品的公共接口；
+**步骤2** 创建 **抽象产品类** ，定义具体产品的公共接口；
 
-**步骤3：** 创建 **具体产品类**（继承抽象产品类） & 定义生产的具体产品；
+**步骤3** 创建 **具体产品类**（继承抽象产品类） & 定义生产的具体产品；
 
-**步骤4：**创建 **具体工厂类**（继承抽象工厂类），定义创建对应具体产品实例的方法；
+**步骤4** 创建 **具体工厂类**（继承抽象工厂类），定义创建对应具体产品实例的方法；
 
-**步骤5：**外界通过调用具体工厂类的方法，从而创建不同 **具体产品类的实例**
+**步骤5** 外界通过调用具体工厂类的方法，从而创建不同 **具体产品类的实例**
 
 ## 3. 实例讲解
 
@@ -107,7 +107,7 @@ class  ProductB extends  Product{
 }
 ```
 
-**步骤4：**创建 **具体工厂类**（继承抽象工厂类），定义创建对应具体产品实例的方法；
+**步骤4** 创建 **具体工厂类**（继承抽象工厂类），定义创建对应具体产品实例的方法；
 
 ```java
 // 工厂A类 - 生产A类产品
@@ -127,7 +127,7 @@ class  FactoryB extends Factory{
 }
 ```
 
-**步骤5：**外界通过调用具体工厂类的方法，从而创建不同 **具体产品类的实例**
+**步骤5** 外界通过调用具体工厂类的方法，从而创建不同 **具体产品类的实例**
 
 ```java
 // 生产工作流程
