--- a/docs/设计模式/创建型模式/原型模式.md
+++ b/docs/设计模式/创建型模式/原型模式.md
@@ -1,12 +1,6 @@
 # 原型模式（Prototype Pattern）
 
-在阎宏博士的《JAVA与模式》一书中开头是这样描述原型（Prototype）模式的：
-
-　　**原型模式属于对象的创建模式。通过给出一个原型对象来指明所有创建的对象的类型，然后用复制这个原型对象的办法创建出更多同类型的对象。这就是选型模式的用意。**
-
-------
-
-# 原型模式的结构
+### 原型模式的结构
 
 　　原型模式要求对象实现一个可以“克隆”自身的接口，这样就可以通过复制一个实例对象本身来创建一个新的实例。这样一来，通过原型实例创建新的对象，就不再需要关心这个实例本身的类型，只要实现了克隆自身的方法，就可以通过这个方法来获取新的对象，而无须再去通过new来创建。
 
@@ -21,10 +15,6 @@
 　　（2）抽象原型(Prototype)角色：这是一个抽象角色，通常由一个Java接口或Java抽象类实现。此角色给出所有的具体原型类所需的接口。
 
 　　（3）具体原型（Concrete Prototype）角色：被复制的对象。此角色需要实现抽象的原型角色所要求的接口。
-
-### 源代码 
-
-　　抽象原型角色
 
 ```java
 public interface Prototype{
@@ -85,8 +75,6 @@ public class Client {
 　　![img](./assets/原型模式/2.png)
 
 　　作为原型模式的第二种形式，它多了一个原型管理器(`PrototypeManager`)角色，该角色的作用是：创建具体原型类的对象，并记录每一个被创建的对象。
-
-### 源代码 
 
 　　抽象原型角色
 
