新增适配器模式

--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -173,7 +173,7 @@ public class Singleton implements Serializable {
 * `Accesing resources in shared mode`
 * `Factories implemented as Singletons`
 
-### 单例模式的`golang`实现
+## 单例模式的`golang`实现
 
 #### singleton.go
 
