--- a/docs/设计模式/创建型模式/原型模式.md
+++ b/docs/设计模式/创建型模式/原型模式.md
@@ -217,7 +217,7 @@ public class Client {
 
 　　如果要创建的原型对象数目不固定的话，可以采取第二种形式。在这种情况下，客户端不保存对原型对象的引用，这个任务被交给管理员对象。在复制一个原型对象之前，客户端可以查看管理员对象是否已经有一个满足要求的原型对象。如果有，可以直接从管理员类取得这个对象引用；如果没有，客户端就需要自行复制此原型对象。
 
-### 原型模式的`golang`实现
+### 原型模式`golang`实现
 
 原型模式使对象能复制自身，并且暴露到接口中，使客户端面向接口编程时，不知道接口实际对象的情况下生成新的对象。
 
