--- a/docs/设计模式/创建型模式/工厂方法模式.md
+++ b/docs/设计模式/创建型模式/工厂方法模式.md
@@ -199,7 +199,7 @@ public class FactoryPattern {
 
 * 本文主要对 **工厂方法模式** 进行了全面介绍
 
-## 8.工厂方法模式的`golang`实现
+## 8.工厂方法模式`golang`实现
 
 工厂方法模式使用子类的方式延迟生成对象到子类中实现。
 
