--- a/docs/设计模式/创建型模式/抽象工厂模式.md
+++ b/docs/设计模式/创建型模式/抽象工厂模式.md
@@ -249,7 +249,7 @@ public class AbstractFactoryPattern {
 
 - 本文主要对 **抽象工厂模式** 进行了全面介绍
 
-## 8. 抽象工厂模式的`golang`实现
+## 8. 抽象工厂模式`golang`实现
 
 抽象工厂模式用于生成产品族的工厂，所生成的对象是有关联的。
 
