--- a/docs/设计模式/结构型模式/外观模式.md
+++ b/docs/设计模式/结构型模式/外观模式.md
@@ -260,7 +260,7 @@ public class Facade Pattern{
 
 - 本文主要对 **外观模式** 进行了全面介绍
 
-## 7.外观模式的`golang`实现
+## 7.外观模式`golang`实现
 
 API 为facade 模块的外观接口，大部分代码使用此接口简化对facade类的访问。
 
