--- a/docs/设计模式/结构型模式/装饰模式.md
+++ b/docs/设计模式/结构型模式/装饰模式.md
@@ -97,7 +97,7 @@ public class Client {
 
 不可能把所有的类设计成都满足这一原则，应当把该原则应用于最有可能发生改变的地方。
 
-## 装饰模式的`golang`实现
+## 装饰模式`golang`实现
 
 装饰模式使用对象组合的方式动态改变或增加对象行为。
 
