--- a/docs/设计模式/结构型模式/适配器模式.md
+++ b/docs/设计模式/结构型模式/适配器模式.md
@@ -336,7 +336,7 @@ public class AdapterPattern {
 
 - 本文主要对**适配器模式**进行了全面介绍;
 
-## 6.适配器模式的`golang`实现
+## 6.适配器模式`golang`实现
 
 适配器模式用于转换一种接口适配另一种接口。
 
