--- a/docs/设计模式/结构型模式/享元模式.md
+++ b/docs/设计模式/结构型模式/享元模式.md
@@ -74,7 +74,7 @@ IntrinsicState: aa
 ExtrinsicState: y
 ```
 
-## 享元模式的`golang`实现
+## 享元模式`golang`实现
 
 享元模式从对象中剥离出不发生改变且多个实例需要的重复数据，独立出一个享元，使多个对象共享，从而节省内存以及减少对象数量。
 
