--- a/docs/设计模式/行为型模式/策略模式.md
+++ b/docs/设计模式/行为型模式/策略模式.md
@@ -9,7 +9,7 @@
 ## 类图
 
 - `Strategy `接口定义了一个算法族，它们都具有`behavior()` 方法。
-- `Context `是使用到该算法族的类，其中的 `doSomething()` 方法会调用 behavior()，`setStrategy(in Strategy)` 方法可以动态地改变 `strategy `对象，也就是说能动态地改变 `Context `所使用的算法。
+- `Context `是使用到该算法族的类，其中的 `doSomething()` 方法会调用 `behavior()`，`setStrategy(in Strategy)` 方法可以动态地改变 `strategy `对象，也就是说能动态地改变 `Context `所使用的算法。
 
 ![img](./assets/策略模式/1.png)
 
