--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -107,7 +107,7 @@ public class Singleton {
 2. 初始化对象
 3. 将 `uniqueInstance `指向分配的内存地址
 
-但是由于 `JVM `具有指令重排的特性，在 Java 1.4 及更早的版本中有可能执行顺序变为了 `1>3>2`，这在单线程情况下自然是没有问题。但如果是多线程下，有可能获得是一个还没有被初始化的实例，以致于程序出错。
+但是由于 `JVM `具有指令重排的特性，在 `Java 1.4` 及更早的版本中有可能执行顺序变为了 `1>3>2`，这在单线程情况下自然是没有问题。但如果是多线程下，有可能获得是一个还没有被初始化的实例，以致于程序出错。
 
 使用 `volatile `可以禁止 `JVM` 的指令重排，保证在多线程环境下也能正常运行。
 
