--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -89,16 +89,14 @@ public class Singleton {
 }
 ```
 
-考虑下面的实现，也就是只使用了一个 if 语句。在 `uniqueInstance == null `的情况下，如果两个线程同时执行 if 语句，那么两个线程就会同时进入 if 语句块内。虽然在 if 语句块内有加锁操作，但是两个线程都会执行 `uniqueInstance = new Singleton();` 这条语句，只是先后的问题，那么就会进行两次实例化，从而产生了两个实例。因此必须使用双重校验锁，也就是需要使用两个 if 语句。
+考虑下面的实现，也就是只使用了一个 if 语句(错误示例,正确情况下应该是使用两个if)。在 `uniqueInstance == null `的情况下，如果两个线程同时执行 if 语句，那么两个线程就会同时进入 if 语句块内。虽然在 if 语句块内有加锁操作，但是两个线程都会执行 `uniqueInstance = new Singleton();` 这条语句，只是先后的问题，那么就会进行两次实例化，从而产生了两个实例。因此必须使用双重校验锁，也就是需要使用两个 if 语句。
 
 ```java
-    if (instance == null) {
-        synchronized(Singleton.class) { // 注意这里是类级别的锁
-        if (instance == null) {       // 这里的检测避免多线程并发时多次创建对象
-          instance = new Singleton();
-        }
-      }
+ if (uniqueInstance == null) {
+    synchronized (Singleton.class) {
+        uniqueInstance = new Singleton();
     }
+}
 ```
 
 `uniqueInstance `采用 `volatile `关键字修饰也是很有必要的。`uniqueInstance = new Singleton();` 这段代码其实是分为三步执行。
