--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -64,7 +64,7 @@ public static synchronized Singleton getUniqueInstance() {
 }
 ```
 
-### 双重校验锁-线程安全
+### 双重检测-线程安全
 
 `uniqueInstance `只需要被实例化一次，之后就可以直接使用了。加锁操作只需要对实例化那部分的代码进行，只有当 `uniqueInstance `没有被实例化时，才需要进行加锁。
 
@@ -89,7 +89,7 @@ public class Singleton {
 }
 ```
 
-考虑下面的实现，也就是只使用了一个 if 语句(错误示例,正确情况下应该是使用两个if)。在 `uniqueInstance == null `的情况下，如果两个线程同时执行 if 语句，那么两个线程就会同时进入 if 语句块内。虽然在 if 语句块内有加锁操作，但是两个线程都会执行 `uniqueInstance = new Singleton();` 这条语句，只是先后的问题，那么就会进行两次实例化，从而产生了两个实例。因此必须使用双重校验锁，也就是需要使用两个 if 语句。
+考虑下面的实现，也就是只使用了一个 if 语句。在 `uniqueInstance == null `的情况下，如果两个线程同时执行 if 语句，那么两个线程就会同时进入 if 语句块内。虽然在 if 语句块内有加锁操作，但是两个线程都会执行 `uniqueInstance = new Singleton();` 这条语句，只是先后的问题，那么就会进行两次实例化，从而产生了两个实例。因此必须使用双重校验， **也就是需要使用两个 if 语句** 。
 
 ```java
  if (uniqueInstance == null) {
