--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -64,11 +64,11 @@ public static synchronized Singleton getUniqueInstance() {
 }
 ```
 
-### 双重检测-线程安全
+### 双重校验-线程安全
 
 `uniqueInstance `只需要被实例化一次，之后就可以直接使用了。加锁操作只需要对实例化那部分的代码进行，只有当 `uniqueInstance `没有被实例化时，才需要进行加锁。
 
-双重校验锁先判断 `uniqueInstance `是否已经被实例化，如果没有被实例化，那么才对实例化语句进行加锁。
+双重校验先判断 `uniqueInstance `是否已经被实例化，如果没有被实例化，那么才对实例化语句进行加锁。
 
 ```java
 public class Singleton { 
