--- a/docs/设计模式/创建型模式/单例模式.md
+++ b/docs/设计模式/创建型模式/单例模式.md
@@ -92,6 +92,7 @@ public class Singleton {
 考虑下面的实现，也就是只使用了一个 if 语句。在 `uniqueInstance == null `的情况下，如果两个线程同时执行 if 语句，那么两个线程就会同时进入 if 语句块内。虽然在 if 语句块内有加锁操作，但是两个线程都会执行 `uniqueInstance = new Singleton();` 这条语句，只是先后的问题，那么就会进行两次实例化，从而产生了两个实例。因此必须使用双重校验， **也就是需要使用两个 if 语句** 。
 
 ```java
+ // 错误代码示例
  if (uniqueInstance == null) {
     synchronized (Singleton.class) {
         uniqueInstance = new Singleton();
