--- a/docs/设计模式/结构型模式/外观模式.md
+++ b/docs/设计模式/结构型模式/外观模式.md
@@ -90,7 +90,7 @@ public class SubSystemC_Aircondition {
 
 ```java
 
-public class Facade Pattern{ 
+public class Facade_Pattern{ 
       public static void main(String[] args){
         {
             SubSystemA_Light light = new SubSystemA_Light();
@@ -177,7 +177,7 @@ public class Facade{
 3. 客户端调用：爷爷使用智能遥控器的时候
 
 ```java
-public class Facade Pattern{ 
+public class Facade_Pattern{ 
       public static void main(String[] args){
         {
             //实例化电器类
