--- a/docs/设计模式/结构型模式/适配器模式.md
+++ b/docs/设计模式/结构型模式/适配器模式.md
@@ -35,11 +35,11 @@
 
 在上图中可以看出：
 
-* 冲突：Target期待调用Request方法，而Adaptee并没有（这就是所谓的不兼容了）。
+* 冲突：`Target`期待调用`Request`方法，而`Adaptee`并没有（这就是所谓的不兼容了）。
 
-* 解决方案：为使Target能够使用Adaptee类里的SpecificRequest方法，故提供一个中间环节Adapter类 **（继承Adaptee & 实现Target接口）** ，把Adaptee的API与Target的API衔接起来（适配）。
+* 解决方案：为使`Target`能够使用`Adaptee`类里的`SpecificRequest`方法，故提供一个中间环节`Adapter`类 **（继承Adaptee & 实现Target接口）** ，把`Adaptee`的`API`与`Target`的`API`衔接起来（适配）。
 
-> Adapter与Adaptee是继承关系，这决定了这个适配器模式是类的
+> `Adapter`与`Adaptee`是继承关系，这决定了这个适配器模式是类的
 
 **2.1.2**  使用步骤（代码解析）
 
