优化适配器模式文章

--- a/docs/设计模式/结构型模式/适配器模式.md
+++ b/docs/设计模式/结构型模式/适配器模式.md
@@ -182,11 +182,11 @@ public class AdapterPattern {
 
 在上图中可以看出：
 
-* 冲突：Target期待调用Request方法，而Adaptee并没有（这就是所谓的不兼容了）。
+* 冲突：`Target`期待调用`Request`方法，而`Adaptee`并没有（这就是所谓的不兼容了）。
 
-* 解决方案：为使Target能够使用Adaptee类里的SpecificRequest方法，故提供一个中间环节Adapter类 **（包装了一个Adaptee的实例）** ，把Adaptee的API与Target的API衔接起来（适配）。
+* 解决方案：为使`Target`能够使用`Adaptee`类里的`SpecificRequest`方法，故提供一个中间环节`Adapter`类 **（包装了一个Adaptee的实例）** ，把`Adaptee`的`API`与`Target`的`API`衔接起来（适配）。
 
-> Adapter与Adaptee是委派关系，这决定了适配器模式是对象的。
+> `Adapter`与`Adaptee`是委派关系，这决定了适配器模式是对象的。
 
 **2.2.2** 使用步骤（代码解析）
 
