优化适配器模式文章

--- a/docs/设计模式/结构型模式/适配器模式.md
+++ b/docs/设计模式/结构型模式/适配器模式.md
@@ -10,8 +10,8 @@
 
 定义一个包装类，用于包装不兼容接口的对象
 
-> 1. 包装类 = 适配器Adapter；
-> 2. 被包装对象 = 适配者Adaptee = 被适配的类
+> 1. 包装类 = 适配器`Adapter`；
+> 2. 被包装对象 = 适配者`Adaptee` = 被适配的类
 
 ### 1.2 主要作用
 
@@ -124,7 +124,7 @@ class PowerPort220V{
 }
 ```
 
-**步骤3：** 创建适配器类（Adapter）
+**步骤3：** 创建适配器类（`Adapter`）
 
 ```java
 class Adapter220V extends PowerPort220V implements Target{
@@ -140,7 +140,7 @@ class Adapter220V extends PowerPort220V implements Target{
 }
 ```
 
-**步骤4：** 定义具体使用目标类，并通过Adapter类调用所需要的方法从而实现目标（不需要通过原有插头）
+**步骤4：** 定义具体使用目标类，并通过`Adapter`类调用所需要的方法从而实现目标（不需要通过原有插头）
 
 ```java
 //进口机器类
@@ -172,9 +172,9 @@ public class AdapterPattern {
 
 #### 2.2 对象的适配器模式
 
-与类的适配器模式相同，对象的适配器模式也是把适配的类的API转换成为目标类的API。
+与类的适配器模式相同，对象的适配器模式也是把适配的类的`API`转换成为目标类的`API`。
 
-> 与类的适配器模式不同的是，对象的适配器模式不是使用继承关系连接到Adaptee类，而是使用委派关系连接到Adaptee类。
+> 与类的适配器模式不同的是，对象的适配器模式不是使用继承关系连接到`Adaptee`类，而是使用委派关系连接到`Adaptee`类。
 
 **2.2.1** UML类图
 
@@ -275,7 +275,7 @@ public class AdapterPattern {
 **优点**
 
 - 使用方便，代码简化
-  仅仅引入一个对象，并不需要额外的字段来引用Adaptee实例
+  仅仅引入一个对象，并不需要额外的字段来引用`Adaptee`实例
 
 **缺点**
 
@@ -294,7 +294,7 @@ public class AdapterPattern {
 - 使用复杂
   需要引入对象实例
 
-> 特别是需要重新定义Adaptee行为时需要重新定义Adaptee的子类，并将适配器组合适配
+> 特别是需要重新定义`Adaptee`行为时需要重新定义`Adaptee`的子类，并将适配器组合适配
 
 ## 4. 应用场景
 
@@ -310,21 +310,21 @@ public class AdapterPattern {
 
 2. 需要同时配源类和其子类：选择对象的适配器
 
-   * 对于类适配器，由于适配器直接继承了Adaptee，使得适配器不能和Adaptee的子类一起工作，因为继承是静态的关系，当适配器继承了Adaptee后，就不可能再去处理  Adaptee的子类了；
+   * 对于类适配器，由于适配器直接继承了`Adaptee`，使得适配器不能和`Adaptee`的子类一起工作，因为继承是静态的关系，当适配器继承了`Adaptee`后，就不可能再去处理`Adaptee`的子类了；
 
    * 对于对象适配器，一个适配器可以把多种不同的源适配到同一个目标。换言之，同一个适配器可以把源类和它的子类都适配到目标接口。因为对象适配器采用的是对象组合的关系，只要对象类型正确，是不是子类都无所谓。
 
-3. 需要重新定义Adaptee的部分行为：选择类适配器
+3. 需要重新定义`Adaptee`的部分行为：选择类适配器
 
-   * 对于类适配器，适配器可以重定义Adaptee的部分行为，相当于子类覆盖父类的部分实现方法。
+   * 对于类适配器，适配器可以重定义`Adaptee`的部分行为，相当于子类覆盖父类的部分实现方法。
 
-   * 对于对象适配器，要重定义Adaptee的行为比较困难，这种情况下，需要定义Adaptee的子类来实现重定义，然后让适配器组合子类。虽然重定义Adaptee的行为比较困难，但是想要增加一些新的行为则方便的很，而且新增加的行为可同时适用于所有的源。
+   * 对于对象适配器，要重定义`Adaptee`的行为比较困难，这种情况下，需要定义`Adaptee`的子类来实现重定义，然后让适配器组合子类。虽然重定义`Adaptee`的行为比较困难，但是想要增加一些新的行为则方便的很，而且新增加的行为可同时适用于所有的源。
 
 4. 仅仅希望使用方便时：选择类适配器
 
-   - 对于类适配器，仅仅引入了一个对象，并不需要额外的引用来间接得到Adaptee。
+   - 对于类适配器，仅仅引入了一个对象，并不需要额外的引用来间接得到`Adaptee`。
 
-   - 对于对象适配器，需要额外的引用来间接得到Adaptee。
+   - 对于对象适配器，需要额外的引用来间接得到`Adaptee`。
 
 ### 总结
 
@@ -340,9 +340,9 @@ public class AdapterPattern {
 
 适配器模式用于转换一种接口适配另一种接口。
 
-实际使用中Adaptee一般为接口，并且使用工厂函数生成实例。
+实际使用中`Adaptee`一般为接口，并且使用工厂函数生成实例。
 
-在Adapter中匿名组合Adaptee接口，所以Adapter类也拥有SpecificRequest实例方法，又因为Go语言中非入侵式接口特征，其实Adapter也适配Adaptee接口。
+在`Adapter`中匿名组合`Adaptee`接口，所以`Adapter`类也拥有`SpecificRequest`实例方法，又因为Go语言中非入侵式接口特征，其实`Adapter`也适配`Adaptee`接口。
 
 #### adapter.go
 
