--- a/docs/设计模式/结构型模式/组合模式.md
+++ b/docs/设计模式/结构型模式/组合模式.md
@@ -6,7 +6,7 @@
 
 ## 类图
 
-组件(Component)类是组合类(Composite)和叶子类(Leaf)的父类，可以把组合类看成是树的中间节点。
+组件(`Component`)类是组合类(`Composite`)和叶子类(`Leaf`)的父类，可以把组合类看成是树的中间节点。
 
 组合对象拥有一个或者多个组件对象，因此组合对象的操作可以委托给组件对象去处理，而组件对象可以是另一个组合对象或者叶子对象。
 
