优化桥接模式文档

--- a/docs/设计模式/结构型模式/桥接模式.md
+++ b/docs/设计模式/结构型模式/桥接模式.md
@@ -13,9 +13,9 @@
 
 ## 实现
 
-RemoteControl 表示遥控器，指代 Abstraction。
+`RemoteControl` 表示遥控器，指代 `Abstraction。`
 
-TV 表示电视，指代 Implementor。
+TV 表示电视，指代 `Implementor`。
 
 桥接模式将遥控器和电视分离开来，从而可以独立改变遥控器或者电视的实现。
 
