优化中介者模式文档

--- a/docs/设计模式/行为型模式/中介者模式.md
+++ b/docs/设计模式/行为型模式/中介者模式.md
@@ -6,14 +6,14 @@
 
 ## 类图
 
-- Mediator: 中介者，定义一个接口用于与各同事(Colleague)对象通信。
-- Colleague: 同事，相关对象
+- `Mediator`: 中介者，定义一个接口用于与各同事(`Colleague`)对象通信。
+- `Colleague`: 同事，相关对象
 
 ![img](./assets/中介者模式/1.png)
 
 ## 实现
 
-Alarm(闹钟)、CoffeePot(咖啡壶)、Calendar(日历)、Sprinkler(喷头)是一组相关的对象，在某个对象的事件产生时需要去操作其它对象，形成了下面这种依赖结构:
+`Alarm`(闹钟)、`CoffeePot`(咖啡壶)、`Calendar`(日历)、`Sprinkler`(喷头)是一组相关的对象，在某个对象的事件产生时需要去操作其它对象，形成了下面这种依赖结构:
 
 ![img](./assets/中介者模式/2.png)
 
@@ -145,7 +145,7 @@ doSprinkler()
 
 例子中的中介者使用单例模式生成中介者。
 
-中介者的change使用switch判断类型。
+中介者的`change`使用`switch`判断类型。
 
 #### mediator.go
 
