优化计算机组成原理相关文档

--- a/docs/计算机基础/计算机组成原理/数据的表示与存储/浮点类型在内存中如何存储.md
+++ b/docs/计算机基础/计算机组成原理/数据的表示与存储/浮点类型在内存中如何存储.md
@@ -26,13 +26,13 @@
 
 对于任何数字表示成二进制科学计数法以后，一定是1点几（尾数）乘以2的多少次方（指数）。对于小于零的负数来说，就是负1点几（尾数）乘以2的多少次方（指数）。所以要存这个数，需要存储三个部分：正负号，尾数，指数。
 
-![img](https://ask.qcloudimg.com/draft/1300884/yel51v8knk.png?imageView2/2/w/1620)
+![img](./assets/浮点类型在内存中如何存储/4.png)
 
 浮点数在内存中的表示方式
 
 具体存储方式如上图所示。最高位有1bit存储正负号，然后指数部分占据8bits（4字节）或11bits（8字节），其余部分全都用来存储尾数部分。对于指数部分，这里存储的结果是实际的指数加上偏移量之后的结果。这里设置偏移量，是为了让指数部分不出现负数，全都为大于等于0的正整数。尾数部分的存储，因为二进制的科学计数法，小数点前一定是1开头，因此我们尾数只需要存储小数点后面的部分即可。接下来依然是举例说明：
 
-![img](https://ask.qcloudimg.com/draft/1300884/76nvls0405.png?imageView2/2/w/1620)
+![img](./assets/浮点类型在内存中如何存储/5.png)
 
 4字节浮点数0.6的存储方式
 
@@ -42,7 +42,7 @@
 
 再来看一个8字节浮点数的例子：
 
-![img](https://ask.qcloudimg.com/draft/1300884/87h65vr65b.png?imageView2/2/w/1620)
+![img](./assets/浮点类型在内存中如何存储/6.png)
 
 8字节-0.1的存储方式
 
@@ -50,7 +50,7 @@
 
 浮点数的这种表示法，其实对于绝对值比较大的数来说，小数点后面的精度会比较差。对于绝对值接近0的比较小的数来说，小数点后面的精度反而会非常高。我们用一段简单的golang代码来说明一下（非常简单，非golang开发也能看懂）。
 
-![img](https://ask.qcloudimg.com/draft/1300884/2v30w0hc63.png?imageView2/2/w/1620)
+![img](./assets/浮点类型在内存中如何存储/7.png)
 
 浮点数的相等性比较
 
