--- a/docs/开发语言/Go语言开发/Go基础/基本类型.md
+++ b/docs/开发语言/Go语言开发/Go基础/基本类型.md
@@ -172,7 +172,7 @@ Go 语言的字符有以下两种：
 
 因为UTF8编码下一个中文汉字由`3~4`个字节组成，所以我们不能简单的按照字节去遍历一个包含中文的字符串，否则就会出现上面输出中第一行的结果。
 
-字符串底层是一个byte数组，所以可以和[]byte类型相互转换。字符串是不能修改的 字符串是由byte字节组成，所以字符串的长度是byte字节的长度。 rune类型用来表示utf8字符，一个rune字符由一个或多个byte组成。
+字符串底层是一个byte数组，所以可以和[]byte类型相互转换。字符串是不能修改的。 字符串是由byte字节组成，所以字符串的长度是byte字节的长度。 rune类型用来表示utf8字符，一个rune字符由一个或多个byte组成。
 
 ### 1.1.10. 修改字符串
 
