--- a/docs/开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/CRUD接口/查询.md
+++ b/docs/开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/CRUD接口/查询.md
@@ -72,7 +72,7 @@ db.Where([]int64{20, 21, 22}).Find(&users)
 //// SELECT * FROM users WHERE id IN (20, 21, 22);
 ```
 
-NOTE 当通过struct进行查询的时候，GORM 将会查询这些字段的非零值， 意味着你的字段包含 `0`， `''`， `false` 或者其他 [零值](https://tour.golang.org/basics/12), 将不会出现在查询语句中， 例如:
+!!! note 当通过struct进行查询的时候，GORM 将会查询这些字段的非零值， 意味着你的字段包含 `0`， `''`， `false` 或者其他 [零值](https://tour.golang.org/basics/12), 将不会出现在查询语句中， 例如:
 
 ```go
 db.Where(&User{Name: "jinzhu", Age: 0}).Find(&users)
