--- a/docs/开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/CRUD接口/查询.md
+++ b/docs/开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/CRUD接口/查询.md
@@ -79,7 +79,7 @@ db.Where(&User{Name: "jinzhu", Age: 0}).Find(&users)
 //// SELECT * FROM users WHERE name = "jinzhu";
 ```
 
-你可以考虑适用指针类型或者 scanner/valuer 来避免这种情况。
+你可以考虑使用指针类型或者 scanner/valuer 来避免这种情况。
 
 ```go
 // 使用指针类型
