--- a/docs/计算机基础/计算机操作系统/硬件结构/为什么0.1+0.2不等于0.3.md
+++ b/docs/计算机基础/计算机操作系统/硬件结构/为什么0.1+0.2不等于0.3.md
@@ -32,7 +32,7 @@
 
 到这里，我们就可以回答前面提到的「负数为什么要用补码方式来表示」的问题了。
 
-如果负数不是使用补码的方式表示，则在做基本对加减法运算的时候， **还需要多一步操作来判断是否为负数，如果为负数，还得把加法反转成减法，或者把减法反转成加法** ，这就非常不好了，毕竟加减法运算在计算机里是很常使用的，所以为了性能考虑，应该要尽量简化这个运算过程。
+如果负数不是使用补码的方式表示，则在做基本加减法运算的时候， **还需要多一步操作来判断是否为负数，如果为负数，还得把加法反转成减法，或者把减法反转成加法** ，这就非常不好了，毕竟加减法运算在计算机里是很常使用的，所以为了性能考虑，应该要尽量简化这个运算过程。
 
 **而用了补码的表示方式，对于负数的加减法操作，实际上是和正数加减法操作一样的** 。你可以看到下图，用补码表示的负数在运算 `-2 + 1` 过程的时候，其结果是正确的：
 
@@ -97,9 +97,9 @@
 
 这三个重要部分的意义如下：
 
-- *符号位*：表示数字是正数还是负数，为 0 表示正数，为 1 表示负数；
-- *指数位*：指定了小数点在数据中的位置，指数可以是负数，也可以是正数， **指数位的长度越长则数值的表达范围就越大** ；
-- *尾数位*：小数点右侧的数字，也就是小数部分，比如二进制 1.0011 x 2^(-2)，尾数部分就是 0011，而且 **尾数的长度决定了这个数的精度** ，因此如果要表示精度更高的小数，则就要提高尾数位的长度；
+- 符号位：表示数字是正数还是负数，为 0 表示正数，为 1 表示负数；
+- 指数位：指定了小数点在数据中的位置，指数可以是负数，也可以是正数， **指数位的长度越长则数值的表达范围就越大** ；
+- 尾数位：小数点右侧的数字，也就是小数部分，比如二进制 1.0011 x 2^(-2)，尾数部分就是 0011，而且 **尾数的长度决定了这个数的精度** ，因此如果要表示精度更高的小数，则就要提高尾数位的长度；
 
 用 `32` 位来表示的浮点数，则称为 **单精度浮点数** ，也就是我们编程语言中的 `float` 变量，而用 `64` 位来表示的浮点数，称为 **双精度浮点数** ，也就是 `double` 变量，它们的结构如下：
 
