--- a/docs/计算机基础/计算机操作系统/内存管理/为什么要有虚拟内存.md
+++ b/docs/计算机基础/计算机操作系统/内存管理/为什么要有虚拟内存.md
@@ -39,11 +39,11 @@
 
 ## 内存分段
 
-程序是由若干个逻辑分段组成的，如可由代码分段、数据分段、栈段、堆段组成。 **不同的段是有不同的属性的，所以就用分段（\*Segmentation\*）的形式把这些段分离出来。**
+程序是由若干个逻辑分段组成的，如可由代码分段、数据分段、栈段、堆段组成。 **不同的段是有不同的属性的，所以就用分段（Segmentation）的形式把这些段分离出来。**
 
 > 分段机制下，虚拟地址和物理地址是如何映射的？
 
-分段机制下的虚拟地址由两部分组成， **段选择因子**和**段内偏移量** 。
+分段机制下的虚拟地址由两部分组成， **段选择因子** 和 **段内偏移量** 。
 
 ![img](./assets/为什么要有虚拟内存/4.png)
 
