--- a/docs/计算机基础/计算机操作系统/进程管理/多线程冲突了怎么办.md
+++ b/docs/计算机基础/计算机操作系统/进程管理/多线程冲突了怎么办.md
@@ -88,11 +88,11 @@
 
 ### 互斥的概念
 
-上面展示的情况称为 **竞争条件（\*race condition\*）** ，当多线程相互竞争操作共享变量时，由于运气不好，即在执行过程中发生了上下文切换，我们得到了错误的结果，事实上，每次运行都可能得到不同的结果，因此输出的结果存在 **不确定性（\*indeterminate\*）** 。
+上面展示的情况称为 **竞争条件（race condition）** ，当多线程相互竞争操作共享变量时，由于运气不好，即在执行过程中发生了上下文切换，我们得到了错误的结果，事实上，每次运行都可能得到不同的结果，因此输出的结果存在 **不确定性（indeterminate）** 。
 
-由于多线程执行操作共享变量的这段代码可能会导致竞争状态，因此我们将此段代码称为 **临界区（\*critical section\*），它是访问共享资源的代码片段，一定不能给多线程同时执行。**  
+由于多线程执行操作共享变量的这段代码可能会导致竞争状态，因此我们将此段代码称为 **临界区（critical section），它是访问共享资源的代码片段，一定不能给多线程同时执行。**  
 
-我们希望这段代码是 **互斥（\*mutualexclusion\*）的，也就说保证一个线程在临界区执行时，其他线程应该被阻止进入临界区** ，说白了，就是这段代码执行过程中，最多只能出现一个线程。
+我们希望这段代码是 **互斥（mutualexclusion）的，也就说保证一个线程在临界区执行时，其他线程应该被阻止进入临界区** ，说白了，就是这段代码执行过程中，最多只能出现一个线程。
 
 ![互斥](./assets/多线程冲突了怎么办/9.jpg)
 
@@ -142,7 +142,7 @@
 
 > 我们先来看看「忙等待锁」的实现
 
-在说明「忙等待锁」的实现之前，先介绍现代 CPU 体系结构提供的特殊 **原子操作指令 —— 测试和置位（\*Test-and-Set\*）指令** 。
+在说明「忙等待锁」的实现之前，先介绍现代 CPU 体系结构提供的特殊 **原子操作指令 —— 测试和置位（Test-and-Set）指令** 。
 
 如果用 C 代码表示 Test-and-Set 指令，形式如下：
 
@@ -166,7 +166,7 @@
 - 第一个场景是，首先假设一个线程在运行，调用 `lock()`，没有其他线程持有锁，所以 `flag` 是 0。当调用 `TestAndSet(flag, 1)` 方法，返回 0，线程会跳出 while 循环，获取锁。同时也会原子的设置 flag 为1，标志锁已经被持有。当线程离开临界区，调用 `unlock()` 将 `flag` 清理为 0。
 - 第二种场景是，当某一个线程已经持有锁（即 `flag` 为1）。本线程调用 `lock()`，然后调用 `TestAndSet(flag, 1)`，这一次返回 1。只要另一个线程一直持有锁，`TestAndSet()` 会重复返回 1，本线程会一直 **忙等** 。当 `flag` 终于被改为 0，本线程会调用 `TestAndSet()`，返回 0 并且原子地设置为 1，从而获得锁，进入临界区。
 
-很明显，当获取不到锁时，线程就会一直 while 循环，不做任何事情，所以就被称为「忙等待锁」，也被称为 **自旋锁（\*spin lock\*）** 。
+很明显，当获取不到锁时，线程就会一直 while 循环，不做任何事情，所以就被称为「忙等待锁」，也被称为 **自旋锁（spin lock）** 。
 
 这是最简单的一种锁，一直自旋，利用 CPU 周期，直到锁可用。在单处理器上，需要抢占式的调度器（即不断通过时钟中断一个线程，运行其他线程）。否则，自旋锁在单 CPU 上无法使用，因为一个自旋的线程永远不会放弃 CPU。
 
